# pdam-pump-sentinel

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/controllers/: anomaly_controller.py
app/jobs/: drift_report_job.py  retraining_job.py
app/middleware/: __init__.py  correlation.py  rate_limit.py  validate_payload.py
app/models/: anomaly_event.py  sensor_reading.py
app/observability/: _prometheus_fallback.py  annotations.py  metrics.py
app/routers/: telemetry.py
app/services/: inference.py  persistence.py
bootstrap/: app.py
dashboard/: app.py  data.py  widgets.py
dashboard/pages/: 0_overview.py  1_live_sensors.py  2_anomaly_history.py  3_model_registry.py  4_drift_reports.py  5_system_health.py  6_runbook.py
data/: README.md
docs/: demo-vertical-slice.md  proposal.md
docs/adr/: 0001-honest-eval-split-strategy.md  0002-no-point-adjustment-in-anomaly-metrics.md  0003-champion-challenger-promotion-gate.md  0004-mlflow-alias-pattern-for-champion-selection.md  0005-mlflow-datasets-and-traceability-tags.md
docs/laporan/: laporan-akhir.md
docs/plans/: 2026-06-08-portfolio-observability-upgrades.md  design.md  sprint-remaining.md
infra/: .env.example  README.md  docker-compose.dev.yml
notebooks/: pca_artifact_visualization.ipynb  skab_eda_and_data_prep.ipynb
scripts/: capture_screenshots.py  generate_pca_visualizations.py  generate_skab_eda.py  inject_drift.py  replay_skab.py  run_e2e_demo.py  seed_initial_models.py  train_all_for_comparison.py  trigger_retrain.py
(+87 files in other folders)
