[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdam-pump-sentinel"
version = "0.1.0"
description = "MLOps platform for predictive maintenance of water distribution pumps over MQTT (RouteMQ)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Tim Tugas Besar AI/IoT" },
]

keywords = [
    "mqtt",
    "anomaly-detection",
    "mlops",
    "predictive-maintenance",
    "iot",
    "routemq",
]

dependencies = [
    "routemq[cli]>=0.23.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "tensorflow>=2.15",
    "mlflow>=2.12",
    "evidently>=0.4",
    "apscheduler>=3.10",
    "streamlit>=1.33",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "redis>=5.0",
    "aiomysql>=0.2.0",
    "paho-mqtt>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9.0",
    "mypy>=1.14",
    "coverage>=7.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "bootstrap", "ml"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
